# proxilion

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  NOTICE  README.md  SECURITY.md  alerts.yml  demo.sh  deny.toml  docker-compose.yml  prometheus.yml  proxilion-policy.example.toml  schema.sql  wrangler.toml
.cargo/: audit.toml
.cloudflare/: worker.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cargo-audit.yml  ci.yml  coverage.yml  image.yml  prometheus-rules.yml  release.yml  static-html-no-js.yml  supply-chain.yml  tls-cert-verification.yml
config/: ops-mapping.yaml  policy.yaml  proxilion.example.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  main.rs  metrics.rs  performance.rs
crates/mcp-protocol/: Cargo.toml
crates/mcp-protocol/src/: lib.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: context.rs  decision.rs  lib.rs  loader.rs  match_expr.rs  ops.rs  rego.rs  trace.rs  yaml.rs
crates/policy-engine/tests/: config_policy_yaml.rs  example_policies.rs  gmail_external_send.rs  observe_mode.rs  per_policy_burst.rs  per_policy_recipients.rs  policy_trace.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: audit_body.rs  auth_middleware.rs  blocked.rs  blocked_expiry.rs  config.rs  demo.rs  edge.rs  error_envelope.rs  kill_cache.rs  main.rs  operator_auth.rs  policy_handle.rs  server.rs  session.rs  test_support.rs
crates/proxy/src/adapters/: action_stream.rs  error.rs  google_calendar.rs  google_drive.rs  google_gmail.rs  mod.rs  policy_trace.rs  read_filter.rs  state.rs
crates/proxy/src/api/: actions.rs  blocked.rs  killswitch.rs  mod.rs  notifier.rs  notifier_public.rs  notifier_slack.rs  policy.rs  setup.rs
crates/proxy/src/crypto/: bearer.rs  mod.rs  pkce.rs  token_cipher.rs
crates/proxy/src/forwarder/: mod.rs  nats.rs  siem.rs  tee.rs
crates/proxy/src/notifier/: burst.rs  email.rs  handle.rs  mod.rs  slack.rs  webhook.rs
crates/proxy/src/oauth/: bridge.rs  error.rs  idp_verify.rs  jwks.rs  mod.rs  routes.rs  state.rs
crates/proxy/src/pic/: cache.rs  cat_key.rs  executor.rs  mod.rs  verifier.rs  violations.rs
crates/proxy/static-admin/: index.html  setup.html
crates/proxy/static-html/: approve.html
crates/proxy/tests/: config_docs.rs
crates/session-state/: Cargo.toml
crates/session-state/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: error_code.rs  lib.rs  operator_scopes.rs
crates/threat-engine/: Cargo.toml
crates/threat-engine/benches/: threat_analysis.rs
crates/threat-engine/src/: lib.rs  policy.rs
crates/threat-engine/src/analyzers/: ai_autonomy.rs  ai_velocity.rs  callback_validation.rs  collection.rs  command_and_control.rs  conversation_analysis.rs  conversation_context.rs  credential.rs  data_volume.rs  defense_evasion.rs  enumeration.rs  exfiltration.rs  file_access.rs  hacking_tools.rs  hallucination.rs  impact.rs  lateral_movement.rs  legitimacy.rs  mcp_orchestration.rs  mod.rs  multi_target_orchestration.rs  multi_user_correlation.rs  persistence.rs  privilege_escalation.rs  prompt_engineering.rs  request_rate.rs  semantic.rs  session_progression.rs  social_engineering.rs  task_fragmentation.rs  tool_call.rs
crates/threat-engine/tests/: evasion_tests.rs  integration_tests.rs  session_aware_tests.rs  unit_tests.rs
crates/threat-engine/tests/unit/: collection_tests.rs  command_and_control_tests.rs  enumeration_tests.rs  mod.rs  test_utils.rs
demo/: README.md  run.sh
demo/scripts/: 01-pic-chain-walk.sh  02-confused-deputy.sh  03-blocked-override.sh  04-killswitch.sh  _lib.sh  record-demo.sh
deploy/helm/proxilion/: Chart.yaml  README.md  values.yaml
docker/: all-in-one.Dockerfile  entrypoint-all-in-one.sh  proxy.Dockerfile  trust-plane.Dockerfile
docs/: ALERTING_GUIDE.md  ARCHITECTURAL_LIMITATIONS.md  ARCHITECTURE.md  AUTHENTICATION.md  BACKUP_RECOVERY.md  BENCHMARKS.md  DEPLOYMENT_GUIDES.md  INCIDENT_RESPONSE.md  MIGRATION_GUIDE.md  QUICK_START.md  TROUBLESHOOTING.md  error-codes.md
docs/audit/: schema-v1.md
docs/install/: email.md  multi-tenant-approvers.md  verifying-artifacts.md
docs/ops/: config-reference.md  key-inventory.md  slos.md  tls-mtls-matrix.md
docs/ops/runbooks/: README.md  db-failover.md  incident-response.md  (+2 more)
docs/specs/: production-readiness.md  qiuth-patterns.md  spec.md  surface-delight-and-correctness.md  ui-less-surfaces.md
examples/: README.md
examples/claude-code/: example.ts
examples/cursor/: README.md  mcp-proxilion-wrapper.ts  package.json  tsconfig.json
examples/python-mcp/: example.py
examples/windsurf/: README.md  mcp-proxilion-wrapper.ts  package.json
loadtest/: README.md  baseline.js  soak.js  spike.js  stress.js
marketing-site/: index.html  technical-deep-dive.html
migrations/: 0001_oauth_pic.sql  0002_quarantine_blocked.sql  0003_action_events.sql  0004_blocked_overrides_killswitch.sql  0005_pic_violations.sql  0006_operator_tokens.sql  0007_notifier_tokens.sql  0008_pic_profile.sql  0009_action_event_bodies.sql  0010_notifier_config.sql  0011_slack_trigger_id.sql  0012_blocked_escalation.sql  0013_oauth_client_revocation.sql  0014_blocked_request_canonical_json.sql
ops/: README.md
ops/grafana/: proxilion.json
ops/prometheus/: alerts.yml  prometheus.yml
scripts/: coverage-per-crate.sh  dev-cert.sh  smoke-pic.sh  stress-audit-body.sh  stress-burst-and-notifier-cli.sh  stress-email-driver.sh  stress-notifier-config-hotswap.sh  stress-notifier.sh  stress-observe-reload.sh  stress-operator-tokens.sh  stress-pic-profile-and-per-policy-burst.sh  stress-scope-and-cli.sh  stress-signed-link-approve.sh  stress-slack-driver.sh  stress-step2-3-3-2.sh  stress-step2-4.sh  stress-step3-1-3-3.sh  stress-step4-1.sh  stress-test-1.6.sh
site/: _headers  _redirects  index.html  robots.txt  site.webmanifest  sitemap.xml
site/pic/: index.html
tools/: Cargo.toml  cost-calculator.rs
(+17 files in other folders)
