[workspace]
members = [
    "crates/mcp-protocol",
    "crates/threat-engine",
    "crates/gateway",
    "crates/session-state",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Proxilion Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP/Web
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"

# AI/ML
# Claude API client (using reqwest for direct API calls)
base64 = "0.22"
