[package]
name = "proxilion-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "proxilion-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
humantime = "2"
sqlx = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
