[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "proxilion-gateway"
path = "src/main.rs"

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }
threat-engine = { path = "../threat-engine", features = ["semantic-analysis"] }
session-state = { path = "../session-state", features = ["redis-store", "inmemory-store"] }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }

# Metrics and monitoring
prometheus = "0.13"
lazy_static = "1.4"

# Performance optimizations
sha2.workspace = true
