[package]
name = "proxy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-server = { workspace = true }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

shared-types = { path = "../shared-types" }
policy-engine = { path = "../policy-engine" }

# Persistence
sqlx = { workspace = true }

# Crypto / encoding
aes-gcm = { workspace = true }
sha2 = { workspace = true }
base32 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
ed25519-dalek = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
moka = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
mime = { workspace = true }
regex = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
mailparse = { workspace = true }
async-nats = { workspace = true }
hmac = { workspace = true }
arc-swap = { workspace = true }
serde_urlencoded = { workspace = true }
lettre = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
regex = { workspace = true }
