[package]
name = "threat-engine"
version.workspace = true
edition.workspace = true

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
sha2.workspace = true
regex = "1.10"
url = "2.5"

[features]
default = []
semantic-analysis = ["reqwest", "base64"]
