[package]
name = "threat-engine"
version.workspace = true
edition.workspace = true

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
sha2.workspace = true
regex = "1.10"
url = "2.5"
lazy_static = "1.4"
toml = "0.8"

[features]
default = []
semantic-analysis = ["reqwest", "base64"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "threat_analysis"
harness = false
